# drfc-manager

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  example.env  pyproject.toml  pytest.ini  training.ipynb
.github/workflows/: mypy.yml  publish.yml  ruff.yml  unit-tests.yml
drfc_manager/: __init__.py  config_env.py
drfc_manager/evaluation/: get_compose_files.py  setup_evaluation_env.py  start_evaluation_stack.py  stop_evaluation_stack.py
drfc_manager/helpers/: config_envs.py  files_manager.py  training_params.py
drfc_manager/models/: data_extraction.py  env_operations.py  model_operations.py  storage_operations.py
drfc_manager/pipelines/: evaluation.py  metrics.py  training.py  viewer.py
drfc_manager/transformers/: general.py  training.py
drfc_manager/types/: config.py  constants.py  docker.py  env_vars.py  model_metadata.py
drfc_manager/utils/: env_utils.py  logging.py  logging_config.py
drfc_manager/viewers/: stream_proxy.py  stream_proxy_handlers.py  stream_proxy_routes.py  stream_proxy_utils.py  streamlit_viewer.py
examples/: evaluation.ipynb  example.env  training.ipynb
src/: __init__.py  config.py  evaluation_pipeline.py  training_pipeline.py  viewer_pipeline.py
src/evaluation/: get_compose_files.py  log_filter.py  prepare_evaluation_configs.py  setup_evaluation_env.py  start_evaluation_stack.py  stop_evaluation_stack.py
src/helpers/: config_envs.py  logs.py  widget_logs.py
src/models/: data_extraction.py
src/pipelines/: __init__.py  training.py  viewer.py
tests/: conftest.py
(+43 files in other folders)
